# rusty-gitclaw

./: Cargo.toml  README.md
gitclaw/: Cargo.toml
gitclaw/src/: agents.rs  audit.rs  compliance.rs  config.rs  examples.rs  hooks.rs  knowledge.rs  lib.rs  loader.rs  main.rs  sandbox.rs  sdk.rs  sdk_hooks.rs  sdk_types.rs  session.rs  skills.rs  tool_loader.rs  workflows.rs
gitclaw/src/tools/: cli.rs  memory.rs  mod.rs  read.rs  shared.rs  write.rs
gitclaw/src/voice/: adapter.rs  mod.rs  openai_realtime.rs  server.rs
pi-agent-core/: Cargo.toml
pi-agent-core/src/: agent.rs  agent_loop.rs  error.rs  lib.rs  types.rs
pi-ai/: Cargo.toml
pi-ai/data/: models.json
pi-ai/src/: api_registry.rs  env_api_keys.rs  error.rs  event_stream.rs  lib.rs  models.rs  stream.rs  types.rs  validation.rs
pi-ai/src/providers/: anthropic.rs  google.rs  google_shared.rs  mod.rs  openai_completions.rs
pi-ai/src/utils/: mod.rs  overflow.rs  simple_options.rs
