[package]
name = "pi-agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pi-ai = { path = "../pi-ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"
